    # Apps :
        * Creme_config :
            - In configuration for CustomForms, the removing of a fields was broken
              when there is a special group (like "Addresses").
            - In configuration for CustomFields, the models were not ordered by name as usual.
        * Reports :
            - A user needs the permission to export a model in order to export a Report now.


== Version 2.7.3 ==

  UPGRADE NOTES :
    - Do not forget to tun the command "generatemedia".

  Users side :
  ------------
    # Some styling issue in list-view with hidden cells in last position
      (like 'billing' ones) have been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Some methods have been added to the class
          'creme_core.gui.listview.smart_columns.SmartColumnsRegistry' to unregister things.
        # The context manager 'creme_core.tests.base.OverrideSettingValueContext'
          did not work when the SettingValue does not exist in DB.
        # Apps :
            * Creme_config :
                - The CSS for 'brick.GenericModelBrick' has been improved when the related model has many fields.


== Version 2.7.2 ==

  Users side :
  ------------
    # You can now see the detail-view of a public EntityFilter which belongs to another user.
      It fixes some issues for Reports with filters too.
    # Apps :
        * Emails :
            - When an EntityEmail is created from the related emails' Brick ("Emails history")
              on the detail-view of an entity, if this entity is not used as recipient
              it's now linked to the email with a relationship "related to the email"
              (& so the email appears in the Brick).


  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The rendering of HistoryLine is now more robust with 'ContentTypes' which have been removed.
        # Apps :
            * Reports :